--- a/docs/website.Rmd
+++ b/docs/website.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "website"
+title: "Fyza's Website for Biostat776"
 knit: (function(input_file, encoding) {
   out_dir <- 'docs';
   rmarkdown::render(input_file,
  encoding=encoding,
  output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
-author: "F Shaikh"
+author: "Fyza Shaikh"
 date: "9/8/2021"
 output: html_document
 ---
