--- a/docs/website.Rmd
+++ b/docs/website.Rmd
@@ -24,7 +24,7 @@ Five Fun Facts!
 
 1. I've performed in two water ballets with Fluid Movement as part of a community art group in Baltimore. (This is a synchronized swimming show at public pools in the city during the summer)
 2. I am NOT a strong swimmer. 
-3. My cat is named Turby because he was so turbulent as a kittne
+3. My cat is named Turby because he was so turbulent as a kitten
 4. I recently learned to make Szechuan food
 5. I used to knit/crochet amigurumi (3D figures)
 
